--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
+        <div id="container">
+            Cabecera
+        </div>
         <h1>Aqui hare mi primer blog</h1>
         <p>y este es el parrafo de inicio</p>
     </body>
