finalizada la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             Cabecera
         </div>
-        <h1>Aqui hare mi primer blog</h1>
-        <p>y este es el parrafo de inicio</p>
+        <h1>Aqui hare mi primer blog, anadi esta zona interesante para ver que dice fredi</h1>
+        <p>y este es el parrafo de inicio, sigo sin entender nada de este curso</p>
     </body>
 </html>
