--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,8 @@
     <body>
         <h1>Aqui hare mi primer blog</h1>
         <p>y este es el parrafo de inicio</p>
+        <p>
+            realmente no se si lo que pondre en este parrafo repercuta en mi tarea final
+        </p>
     </body>
 </html>
