--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,6 @@
             Cabecera
         </div>
         <h1>Aqui hare mi primer blog, anadi esta zona interesante para ver que dice fredi</h1>
-        <p>y este es el parrafo de inicio, sigo sin entender nada de este curso</p>
-        <p>
-            este parrafo lo hice en cabecera y con el merge tiene que salir en master
-        </p>
+        <p>este parrafo lo hice en cabecera y con el merge tiene que salir en master</p>
     </body>
 </html>
