--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo de la macarena, yo modifico mas bien poco</title>
+        <title>El titulo de la macarena, yo modifico mas bien poco y sigo anadiendo</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
